--- a/views/dashboard.hbs
+++ b/views/dashboard.hbs
@@ -4,4 +4,5 @@
 <script>
    // Parse the JSON string from the server-side into a JavaScript object, the accessCode is returned by the routes
     const projectAccessDetails = JSON.parse({{safe accessCode}});
+    const projectAccessUserRights = {{safe userRights}};
 </script>
