--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -56,7 +56,7 @@
             </ul>
 
             <div class="sidebar__projectfilter">
-                <label for="projectFilterSelect" class="sidebar__projectfilter-label">Prosjekt velger</label>
+                <label for="projectFilterSelect" class="sidebar__projectfilter-label">Prosjektvelger</label>
                 <select id="projectFilterSelect" class="sidebar__projectfilter-select" multiple="multiple">
                     <!-- Project options will be dynamically added here -->
                 </select>
@@ -68,7 +68,7 @@
             </div>
             
             <div class="sidebar__contact">
-                <a class="sidebar__contact-link" href="https://www.greennorway.no/contact-1" target="_blank">
+                <a class="sidebar__contact-link" href="https://share-eu1.hsforms.com/1CRnd2UHlQl6EhjUkvhquLg2d9w57" target="_blank">
                     <i class="fas fa-envelope"></i>Kontakt oss
                 </a>
             </div>
