--- a/views/register.html
+++ b/views/register.html
@@ -12,7 +12,7 @@
     <div class="login-container">
         <div class="login-box">
             <div class="login-right">
-                <h3>Registrer deg:</h3>
+                <h3>Registrer bruker</h3>
                 <form id="registerForm">
                     <div class="form-group">
                         <label for="fornavn">Fornavn</label>
@@ -23,7 +23,7 @@
                         <input type="text" id="etternavn" name="etternavn" required>
                     </div>
                     <div class="form-group">
-                        <label for="telefon">Telefon nummer</label>
+                        <label for="telefon">Telefonnummer</label>
                         <input type="tel" id="telefon" name="telefon" required>
                     </div>
                     <div class="form-group">
@@ -38,16 +38,19 @@
                         <label for="rolle">Rolle</label>
                         <input type="text" id="rolle" name="rolle" required>
                     </div>
-                    <button type="submit" class="header__logout-button">Registrer deg</button>
+                    <div class="form-group">
+                        <label for="rolle">Hva ønsker du tilgang til?</label>
+                        <input type="text" id="kommentar" name="kommentar">
+                    </div>
+                    <button type="submit" class="header__logout-button">Registrer</button>
                 </form>
                 <form action="/logout" method="post">
                     <button type="submit" class="header__logout-button">Logg ut</button>
                 </form>
-                <p class="cookie-notice">Informasjonskapsler må være aktivert i nettleseren din</p>
             </div>
             <div class="login-left">
                 <img src="logo.png" alt="Maker Logo" class="logo">
-                <p class="signup-link">Har du noen spørsmål? <a href="https://greennorway.no">Kontakt oss</a></p>
+                <p class="signup-link">Har du noen spørsmål? <a href="https://share-eu1.hsforms.com/1CRnd2UHlQl6EhjUkvhquLg2d9w57">Kontakt oss</a></p>
             </div>
         </div>
     </div>
