--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -27,6 +27,14 @@
     <script src="https://cdn.jsdelivr.net/npm/flatpickr/dist/l10n/no.js"></script>
     <!-- Load Power BI JS -->
     <script src="https://cdn.jsdelivr.net/npm/powerbi-client@2.18.5/dist/powerbi.min.js"></script>
+    <!-- Load clarity -->
+    <script type="text/javascript">
+    (function(c,l,a,r,i,t,y){
+        c[a]=c[a]||function(){(c[a].q=c[a].q||[]).push(arguments)};
+        t=l.createElement(r);t.async=1;t.src="https://www.clarity.ms/tag/"+i;
+        y=l.getElementsByTagName(r)[0];y.parentNode.insertBefore(t,y);
+    })(window, document, "clarity", "script", "oswcivmdh5");
+    </script>
 </head>
 <body>
     <div class="header">
