--- a/views/register.html
+++ b/views/register.html
@@ -39,7 +39,7 @@
                         <input type="text" id="rolle" name="rolle" required>
                     </div>
                     <div class="form-group">
-                        <label for="rolle">Hva ønsker du tilgang til?</label>
+                        <label for="kommentar">Hva ønsker du tilgang til?</label>
                         <input type="text" id="kommentar" name="kommentar">
                     </div>
                     <button type="submit" class="header__logout-button">Registrer</button>
