--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -65,14 +65,14 @@
 
 
             <div class="sidebar__projectfilter">
-                <label for="projectFilterSelect" class="sidebar__projectfilter-label">Prosjektvelger</label>
+                <label for="projectFilterSelect" class="sidebar__projectfilter-label">Byggvelger</label>
                 <select id="projectFilterSelect" class="sidebar__projectfilter-select" multiple="multiple">
                     <!-- Project options will be dynamically added here -->
                 </select>
             </div>
             
             <div class="filter-container">
-                <label for="monthYearRangePicker" class="sidebar__projectfilter-label">Velg dato</label>
+                <label for="monthYearRangePicker" class="sidebar__projectfilter-label">Velg periode</label>
                 <input type="text" id="monthYearRangePicker" class="date-range-picker">
             </div>
             
