fix: update label for project filter in sidebar layout

--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -65,7 +65,7 @@
 
 
             <div class="sidebar__projectfilter">
-                <label for="projectFilterSelect" class="sidebar__projectfilter-label">Byggvelger</label>
+                <label for="projectFilterSelect" class="sidebar__projectfilter-label">Velg bygg</label>
                 <select id="projectFilterSelect" class="sidebar__projectfilter-select" multiple="multiple">
                     <!-- Project options will be dynamically added here -->
                 </select>
